--- a/src/Mocking.Tests/Mocking.Tests.csproj
+++ b/src/Mocking.Tests/Mocking.Tests.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserTests.cs" />
   </ItemGroup>
